spacing fix

--- a/css/tab-hello.styl
+++ b/css/tab-hello.styl
@@ -24,6 +24,8 @@
     border-radius 140px
   #hello
     animation fadein 2s
+    #title, #description, #social
+      padding 15px
     #title
       margin-top 10px
       font-size 100px
@@ -42,11 +44,13 @@
         color clouds
         font-size 52px
         line-height 75px
-        margin-right 25px
+        margin 0 12px 0 12px
       a:visited
         color asbestos
       a:hover
         color silver
+      .first
+        margin-left 0
 .no-js #avatar, #avatar.loaded
   background: url("http://gravatar.com/avatar/21fc27a2ac6cd9094a423997f0344a0b?s=280") no-repeat;  
   animation fadein 2s
@@ -65,6 +69,7 @@
         margin-bottom 0px
       #title,#description,#social
         text-align left
+        padding 0
     
     
   
